[gd_scene load_steps=3 format=3 uid="uid://simple_main_uid"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1"]
[ext_resource type="Script" path="res://scripts/MainSimple.gd" id="2"]

[node name="MainSimple" type="Node2D"]
script = ExtResource("2")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="StartScreen" type="Control" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="UI/StartScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/StartScreen/CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="UI/StartScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "LAGALA"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="UI/StartScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "START GAME"

[node name="GameScreen" type="Control" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameLabel" type="Label" parent="UI/GameScreen"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -30.0
offset_right = 200.0
text = "GAME STARTED! Press ESC to go back"
